--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!Doctype html>
 <html>
   <head>
-    <!-- <link rel="stylesheet" type="text/css" href="styles.css">  -->
+     <link rel="stylesheet" type="text/css" href="styles.css">  
     <title>My Portfolio</title>
   </head>
 
